# vans-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/vans_bot/: __main__.py  base.py  page_diff.py  vans_lead_times.py  vans_news.py
tests/: test_lcp_faq.py  test_lead_times.py  test_url_changed.py  test_vans_news.py
tests/data/: lcp_faq.html  vans_lead_times.html  vans_news.html
vans_bot/: __main__.py  url_changed.py  vans_lcp_faq.py  vans_lead_times.py  vans_news.py
