[project]
name = "vans-bot"
version = "0.1.0"
description = "Slack bot that post changes to the Van's Aircraft website"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Erik Hasse", email = "erik.g.hasse@gmail.com" }
]

dependencies = [
    "beautifulsoup4>=4.13.3",
    "openai>=1.65.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "slack-bolt>=1.22.0",
]

[project.scripts]
vans-bot = "vans_bot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "types-requests>=2.32.0.20250301",
]
